--- a/neural/src/Components/Footer/Footer.css
+++ b/neural/src/Components/Footer/Footer.css
@@ -1,240 +1,206 @@
 .footer_container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 123px;
-    background:var(--background-color);
-    height: auto;
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 123px;
+  /* background:var(--background-color); */
+  background-color: white;
+  height: auto;
 }
 
 .footer_links_Logo {
-    display: flex;
-    align-items: center;
-    width: 40vw;
- 
-    height: auto
-    
-}
-.footer_links_Logo img{
-   height: auto;
-   width: 35%;
+  display: flex;
+  align-items: center;
+  width: 40vw;
 
+  height: auto;
+}
+.footer_links_Logo img {
+  height: auto;
+  width: 35%;
 }
 .footer_links_mainContainer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 60vw;    
-    height: 125px;
-    
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 60vw;
+  height: 125px;
 }
 
 .footer_links_container {
-    display: flex;
-    justify-content: center;   
-    height: 100%;
-    gap: 150px; /* Adjust the gap as needed */
-
-    
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  gap: 150px; /* Adjust the gap as needed */
 }
 
-.footer_links_container > div {
-    display: flex;
-    flex-direction: column;
-    margin-right: auto; /* Push divs to the left */  
-    justify-content: space-between;
-
+.footer_links_container div:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  margin-right: auto; /* Push divs to the left */
+  justify-content: space-between;
 }
-.footer_logos{
-   
-    display: flex;
-    justify-content: space-around; 
-    align-items: center; 
-    margin-top: 15px;
-    
+.footer_logos {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 15px;
 }
 
 .footer_links_container a {
-    text-decoration: none;
-    list-style: none;
-    font-family: "Josefin Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
+  text-decoration: none;
+  list-style: none;
+  font-family: "Josefin Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
-
-
-.follow_us_social_media_platform{
-    display: flex;
-    align-items: center;
-    height: 150px;
-    justify-content: space-between;
- 
+.follow_us_social_media_platform {
+  display: flex;
+  align-items: center;
+  height: 150px;
+  justify-content: space-between;
 }
 .footer_social_media {
-    width: 35px;
-    height: 35px;
-    
+  width: 35px;
+  height: 35px;
 }
 
 .links_or_footer {
-    font-size: 18px;
-    line-height: 22px;
-    
-    
-    
+  font-size: 18px;
+  line-height: 22px;
 }
 
 .Follow_us_on {
+  font-size: 18px;
+  line-height: 22px;
+}
+
+@media screen and (max-width: 1241px) and (min-width: 768px) {
+  .footer_container {
+    padding: 5px 20px 40px 20px;
+    height: auto;
+  }
+  .footer_links_Logo {
+    margin: auto;
+    width: 50vw;
+  }
+  .footer-logo-new {
+    margin: auto;
+  }
+  .footer_container {
+    flex-direction: column;
+  }
+  .footer_links_mainContainer {
+    flex-direction: column;
+    height: auto;
+
+    width: 80vw;
+  }
+  .footer_links_container {
+    margin-top: 30px;
+    width: 100%;
+    justify-content: space-evenly;
+
+    flex-direction: row;
+  }
+  .footer_links_container > div {
+    width: calc(100% / 2);
+  }
+
+  .footer_text_links {
+    margin-top: 30px;
+  }
+
+  .footer_links_container
+    div:nth-child(1)
+    .footer_text_links
+    > .links_or_footer {
+    text-align: left;
+    font-size: 26px;
+    line-height: 32px;
+    width: auto;
+  }
+  .footer_links_container
+    > div:nth-child(2)
+    .footer_text_links
+    > .links_or_footer {
+    text-align: right !important;
+    font-size: 26px;
+    line-height: 32px;
+  }
+  .follow_us_social_media_platform {
+    margin-top: 80px;
+  }
+  .Follow_us_on {
+    font-size: 30px;
+    line-height: 38px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .footer_container {
+    padding: 0px 10px;
+    height: auto;
+  }
+  .footer_links_Logo {
+    margin: auto;
+    width: 90vw;
+  }
+  .footer-logo-new {
+    margin: auto;
+    margin-top: 5px;
+  }
+  .footer_container {
+    flex-direction: column;
+  }
+  .footer_links_mainContainer {
+    flex-direction: column;
+    height: auto;
+
+    width: 90vw;
+  }
+  .footer_links_container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    justify-content: space-around;
+    /* align-items: flex-end; */
+    gap: 0px;
+  }
+
+  .footer_text_links {
+    margin-top: 10px;
+  }
+
+  .footer_links_container div:nth-child(2) {
+    height: 100%;
+    margin: 0px;
+  }
+
+  .footer_links_container
+    div:nth-child(1)
+    .footer_text_links
+    > .links_or_footer {
+    text-align: left;
+    font-size: 16px;
+    line-height: 24px;
+    width: auto;
+  }
+  .footer_links_container
+    > div:nth-child(2)
+    .footer_text_links
+    > .links_or_footer {
+    text-align: left !important;
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .follow_us_social_media_platform {
+    height: 100px;
+  }
+  .Follow_us_on {
     font-size: 18px;
-    line-height: 22px;
-}
-
-
-@media screen and (max-width:1241px) and (min-width:768px) {
-    .footer_container{
-        padding: 5px 20px 40px 20px;
-        height: auto;
-       
-    }
-    .footer_links_Logo{
-        margin: auto;
-        width: 50vw;
-       
-    }
-    .footer-logo-new{
-        margin: auto;
-    }
-    .footer_container{
-        flex-direction: column;
-    }
-    .footer_links_mainContainer{
-        flex-direction: column;
-        height:auto;
-        
-        width: 80vw;
-    }
-    .footer_links_container{
-        margin-top: 30px;
-        width: 100%;
-        justify-content:space-evenly;
-        
-        flex-direction: row;
-       
-    }
-    .footer_links_container > div {
-        width: calc(100% / 2);
-    }
-   
-   
-    .footer_text_links{
-        margin-top: 30px;
-      
-    }
-    
-
-    .footer_links_container div:nth-child(1)  .footer_text_links > .links_or_footer{
-        text-align:left;
-        font-size: 26px;
-        line-height: 32px;
-        width: auto;
-       
-    }
-    .footer_links_container>div:nth-child(2) .footer_text_links >.links_or_footer{
-        text-align:right!important;
-        font-size: 26px;
-        line-height: 32px;
-    }
-    .follow_us_social_media_platform{
-        
-        margin-top: 80px;
-    }
-    .Follow_us_on{
-        font-size: 30px;
-        line-height: 38px;
-    }
-}
-@media screen and (max-width:767px)  {
-    .footer_container{
-        padding: 0px 10px;
-        height: auto;
-     
-       
-    }
-    .footer_links_Logo{
-        margin: auto;
-        width: 90vw;
-       
-       
-    }
-    .footer-logo-new{
-        margin: auto;
-        margin-top: 5px;
-      
-    }
-    .footer_container{
-        flex-direction: column;
-    }
-    .footer_links_mainContainer{
-        flex-direction: column;
-        height:auto;
-      
-        width: 90vw;
-      
-    }
-    .footer_links_container{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 90%;
-       justify-content: space-around;
-        /* align-items: flex-end; */
-        gap: 0px;
-        
-      
-       
-       
-    }
-
-   
-   
-    .footer_text_links{
-        margin-top: 10px;
-      
-      
-    }
-  
-   
-    .footer_links_container div:nth-child(2){
-        
-    
-        height: 100%;
-        margin: 0px;
-    }
-   
-    .footer_links_container div:nth-child(1)  .footer_text_links > .links_or_footer{
-        text-align:left;
-        font-size: 16px;
-        line-height: 24px;
-        width: auto;
-   
-       
-    }
-    .footer_links_container>div:nth-child(2) .footer_text_links >.links_or_footer{
-        text-align:left!important;
-        font-size: 16px;
-        line-height: 24px;
-       
-    }
-    .follow_us_social_media_platform{
-        
-        height: 100px;
-        
-    }
-    .Follow_us_on{
-        font-size: 18px;
-        line-height: 24px;
-    }
+    line-height: 24px;
+  }
 }
