--- a/neural/src/Pages/AboutUs/AboutUs.css
+++ b/neural/src/Pages/AboutUs/AboutUs.css
@@ -248,7 +248,7 @@
 
     .about-description {
         font-size: 3vw;
-        line-height:3.8vw;
+        line-height:5vw;
         color: #CEE7FE;
         font-family: Lato, sans-serif;
         font-family: 400;
@@ -413,13 +413,13 @@
     }
 
     .about-description {
-        font-size: 5vw;
-        line-height:calc(4vh-.9vw);
+        font-size: 5.5vw;
+        line-height:calc(3.5vh);
     }
 
     .about-detail {
-        font-size: 2.5vw;
-        line-height: calc(2.5vh-.9vw);
+        font-size: 3vw;
+        line-height: calc(2.5vh);
         margin-top: 2vh;
     }
 
